src/styles/map.module.css
.mapsheading {
    justify-content: center;
    align: center;
    text-align: center;
    margin: 15px;
    z-index: 10;
    position: fixed;
    width: 250px;
    margin-top: 20px;
    left: 50%;
    transform: translate(-50%, 0);
}

.mapsheading p {
    margin: 0;
    padding: 1rem;
    background-color: rgba(var(--callout-rgb), 0.5);
    border: 1px solid rgba(var(--callout-border-rgb), 0.3);
    border-radius: var(--border-radius);
}

.mapsheading h2 {
    font-weight: 600;
    margin-bottom: 0.7rem;
}

/* Mobile */
@media (max-width: 700px) {
    .mapsheading {
        margin-top: 70px;
    }
}

